<resources>
    <string name="app_name">GoRentCar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="gorentcar">GoRentCar</string>
    <string name="sewa_mobil">Sewa Mobil</string>
    <string name="tersedia">Tersedia</string>
    <string name="favorit">Favorit</string>
    <string name="transaksi">Transaksi</string>
    <string name="panduan">Panduan</string>
    <string name="bantuan">Bantuan</string>
    <string name="keluar">Keluar</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="dengan_masuk_atau_mendaftar_kamu_menyetujui_ketentuan_layanan_dan_kebijakan_privasi">Dengan Masuk atau Mendaftar, kamu menyetujui Ketentuan Layanan dan Kebijakan Privasi.</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">MASUK</string>
    <string name="mau_reunian_sama_temen_temen_sekolah_pergi_makan_sama_gebetan_mau_jalan_jalan_sama_keluarga_tapi_kamu_bingung_ga_punya_mobil_tenang_gorentcar_adalah_solusi_dari_masalahmu">Mau Reunian sama temen - temen sekolah, Pergi makan sama gebetan, Mau jalan - jalan sama keluarga, Tapi Kamu bingung ga punya mobil ? Tenang!!, GoRentCar adalah Solusi dari masalahmu !</string>
    <string name="kalo_bisa_sewa_ngapain_harus_beli">Kalo Bisa Sewa, Ngapain Harus Beli!</string>
    <string name="selamat_datang_di_gorentcar">Selamat Datang Di GoRentCar!</string>
    <string name="lengkapi_data_dirimu_di_bawah_ini_yaa">Lengkapi Data Dirimu Di Bawah ini yaa</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="no_hp">No.HP</string>
    <string name="cth_ahmad_dinar">Cth : Ahmad Dinar</string>
    <string name="cth_nugraha">Cth:Nugraha</string>
    <string name="cth_jl_sekeloa">Cth:Jl.sekeloa</string>
    <string name="cth_name_gmail_com">Cth:name@gmail.com</string>
    <string name="silahkan_masukan_nomber_hp_mu_yang_sudah_terdaftar_di_aplikasi_gorentcar">Silahkan Masukan Nomber HP-mu yang sudah terdaftar di aplikasi GoRentCar</string>
    <string name="no_hp1">No.HP</string>
    <string name="masuk1">MASUK</string>
    <string name="daftar1">DAFTAR</string>
    <string name="no_hp_kalian">No.HP Kalian</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="ahmad_dinar_nugraha">Ahmad Dinar Nugraha</string>
    <string name="nugienugraha97_gmail_com">nugienugraha97@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="cth_ahmad_dinar_nugraha">Cth:Ahmad Dinar Nugraha</string>
    <string name="masukan_email_dan_password_yang_telah_kamu_bikin_di_aplikasi_gorentcar">Masukan Email Dan Password Yang Telah Kamu Bikin Di Aplikasi GoRentCar</string>
    <string name="sewa_sekarang">Sewa Sekarang</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="email_saya">Email Saya</string>
    <string name="GoRentCar">GoRentCar adalah sebuah aplikasi platform android yang memungkinkan memudahkan urusan keluaga anda seperti ingin pergi jalan - jalan bersama keluarga tetapi belum mempunyai mobil, Aplikasi ini sangat cocok buat anda yang sering berpergian bersama keluarga maupun bersama teman - teman anda.</string>
    <string name="apa_itu_gorentcar">Apa Itu GoRentCar ?</string>
    <string name="apa_keuntungan_menyewa_mobil_di_gorentcar">Apa Keuntungan Menyewa Mobil Di GoRentCar ?</string>
    <string name="mobil_apa_saja_yang_bisa_di_sewa">Mobil Apa Saja Yang Bisa Di Sewa ?</string>
    <string name="tentunya_kami_menyediakan_mobil_dengan_kondisi_yang_fit_dan_nyaman_untuk_di_pakai_selain_itu_juga_kami_menyediakan_mobil_dari_varian_yang_tertinggi_toyota_alphard_sampai_ke_varian_menengah_toyota_avanza">Tentunya kami menyediakan mobil dengan kondisi yang fit dan nyaman untuk di pakai. Selain itu juga kami menyediakan mobil dari varian yang tertinggi (Toyota Alphard) sampai ke varian menengah (Toyota Avanza)</string>
    <string name="siapa_saja_yang_bisa_menyewa_mobil_gorentcar">Siapa Saja Yang Bisa Menyewa Mobil GoRentCar ?</string>
    <string name="bebas">Berdasarkan peraturan yang ada di Indonesia saat ini untuk mengendarakan sebuah mobil, Kami menetapkan siapa saja yang ingin menyewa mobil di GoRentCar harus sudah memiliki SIM A dari pihak kepolisian, dan tentu saja jika tidak mempunyai SIM A kami tidak akan memberikan satu unitpun kepada pelanggan yang tidak memiliki SIM A</string>
    <string name="jangan_ragu_untuk_bertanya">Jangan Ragu Untuk Bertanya!</string>
    <string name="solusi">Jangan ragu untuk bertanya kepada kami. Kami senang dapat membantu anda menemukan solusi yang anda butuhkan</string>
    <string name="isi_data_di_bawah_ini_dan_kami_akan_kembali_dengan_jawaban_maksimal_2_hari_kerja">Isi Data Di Bawah Ini dan Kami Akan Kembali Dengan Jawaban Maksimal 2 Hari Kerja.</string>
    <string name="subject_pesan">Subject Pesan</string>
    <string name="tulis_pesan">Tulis Pesan</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="masukan_subject_pesan">Masukan Subject Pesan</string>
    <string name="rp_800_000">Rp. 800.000</string>
    <string name="email">Email</string>
    <string name="emaildua">Email</string>
    <string name="masukan_ulang_password">Masukan Ulang Password</string>
    <string name="password">Password</string>
    <string name="passworddua">Password</string>
    <string name="nama_mobil">Nama Mobil</string>
    <string name="merek_mobil">Merek Mobil</string>
    <string name="tanggal_pinjam">Tanggal Pinjam</string>
    <string name="tanggal_kembali">Tanggal Kembali</string>
    <string name="titikdua">:</string>
    <string name="pilih_tanggal_kembali">Pilih Tanggal Kembali</string>
    <string name="pilih_tanggal_awal">Pilih Tanggal Awal</string>
    <string name="tahun_mobil">Tahun Mobil</string>
    <string name="biodata">Biodata</string>
    <string name="pinjam">pinjam</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="lama">Lama</string>
    <string name="perhari">Perhari</string>
    <string name="lama_pinjaman">Lama Pinjaman</string>
    <string name="harga_mobil_perhari">Harga Mobil Perhari</string>
    <string name="kembali">kembali</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="_1_penyewa_harus_sudah_mempunyai_sim_a">1. Penyewa Harus sudah mempunyai SIM A</string>
    <string name="_2_pelunasan_harus_datang_langsung_ke_toko">2. Pelunasan harus datang langsung ke toko</string>
    <string name="_3_penyewa_harus_mengembalikan_mobil_tepat_waktu">3. Penyewa harus mengembalikan mobil tepat waktu</string>
    <string name="_4_kerusakan_mobil_di_tanggung_oleh_pihak_penyewa">4. Kerusakan mobil di tanggung oleh pihak penyewa</string>
    <string name="lanjut">Lanjut</string>
    <string name="sewa">SEWA</string>
    <string name="batal">Batal</string>
    <string name="dp_50_dari_total_biaya">DP 50% dari Total Biaya</string>
    <string name="segera_datang">SEGERA DATANG</string>
    <string name="history_transaksi">History Transaksi</string>
</resources>
